--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -16,4 +16,6 @@
 <% end %>
 <% when 'long_answer' %>
 <%= text_area_tag question.id %>
+<% when 'number_select' %>
+<%= select_tag question.id, options_for_select(1..5), class: "form-control" %>
 <% end %>
