--- a/app/views/prompt_templates/index.html.erb
+++ b/app/views/prompt_templates/index.html.erb
@@ -1,10 +1,8 @@
+<%= link_to "New prompt_template", new_prompt_template_path, class: "btn btn-success" %>
 <h1>Templates</h1>
 <div id="prompt_templates">
   <% @prompt_templates.each do |prompt_template| %>
-    <%= render prompt_template %>
-    <p>
-      <%= link_to "Show this prompt_template", prompt_template, class: "btn btn-info" %>
-    </p>
+    <%= link_to prompt_template.name, prompt_template, class: "prompt-template-link" %> <span class="badge text-bg-secondary"><%= prompt_template.responses.count%></span>
+    <hr/>
   <% end %>
 </div>
-<%= link_to "New prompt_template", new_prompt_template_path, class: "btn btn-success" %>
