--- a/app/views/prompt_templates/show.html.erb
+++ b/app/views/prompt_templates/show.html.erb
@@ -4,13 +4,14 @@
 <%= render "prompts/form" %>
 <div>
   <% @prompt_template.prompts.each do |prompt| %>
-    <p><%= prompt.id %>
-      <%= prompt.body %>
-    </p>
+    <div class="bg-light">
+      <%= render prompt if prompt.id %>
+    </div>
   <% end %>
 </div>
 <div>
   <%= link_to "Edit", edit_prompt_template_path(@prompt_template), class: "btn btn-secondary" %> |
   <%= link_to "Back", prompt_templates_path, class: "btn btn-secondary" %>
+  <%= link_to "Prompts", prompt_template_prompts_path(@prompt_template), class: "btn btn-secondary" %>
   <%= button_to "Destroy", @prompt_template, method: :delete, class: "btn btn-danger" %>
 </div>
