--- a/app/views/prompts/_prompt.html.erb
+++ b/app/views/prompts/_prompt.html.erb
@@ -1,16 +1,10 @@
-<div id="<%= dom_id prompt %>">
-  <h1><%= prompt.prompt_template.name %></h1>
+<div class="single-prompt" id="<%= dom_id prompt %>">
+  <%= link_to "Show this prompt", prompt_template_prompt_path(@prompt_template, prompt), class: "btn" if prompt.id %>
   <% prompt.prompt_template.questions.each do |question| %>
-    <h2><%= question.name %></h2>
-    <% case question.question_type %>
-    <% when 'single_choice' %>
-    <p><%= question.answers.find { |a| a.id.to_s == prompt.template_answers[question.id.to_s] }&.name %></p>
-    <% when 'multiple_choice' %>
-    <% question.answers.select { |a| prompt.multiple_choice_answers(question.id).include?(a.id) }.each do |answer| %>
-      <p><%= answer.name %></p>
-    <% end %>
-    <% when 'long_answer' %>
-    <p><%= prompt.template_answers[question.id.to_s] %></p>
+    <h4 class="text-truncate"><%= question.display_name %>
+      <% question.answers_with(prompt.template_answers[question.id.to_s])&.each do |answer| %>
+        <small><%= answer.name %></small>
+      <% end %>
+    </h4>
   <% end %>
-<% end %>
 </div>
