--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,7 +6,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item"><%= link_to "Home", "#", class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to "Home", home_path, class: "nav-link" %></li>
+        <li class="nav-item"><%= link_to "Docs", docs_path, class: "nav-link" %></li>
       </ul>
     </div>
   </div>
