--- a/app/views/prompt_templates/_form.html.erb
+++ b/app/views/prompt_templates/_form.html.erb
@@ -3,7 +3,7 @@
   <%= form.error_notification message: form.object.errors[:base].to_sentence if form.object.errors[:base].present? %>
   <div class='form-group'>
     <%= form.select :prompt_template_type,
-        options_for_select(PromptTemplate.prompt_template_type_select, selected: form.object.prompt_template_type),
+        options_for_select(PromptTemplate.prompt_template_type_select),
         {},
         'data-dynamic-select-target': 'select',
         'data-action': 'dynamic-select#selected', class: "form-control" %>
@@ -16,12 +16,12 @@
   </div>
   <div data-controller="nested-form" data-nested-form-index-value='QUESTION_RECORD'>
     <template data-nested-form-target='template'>
-      <%= form.fields_for :questions, Question.new, child_index: 'QUESTION_RECORD' do |question| %>
-        <%= render 'question_fields', form: question %>
+      <%= form.fields_for :template_questions, TemplateQuestion.new, child_index: 'QUESTION_RECORD' do |template_question| %>
+        <%= render 'question_fields', form: template_question %>
       <% end %>
     </template>
-    <%= form.fields_for :questions do |question| %>
-      <%= render 'question_fields', form: question %>
+    <%= form.fields_for :template_questions do |saved_template_question| %>
+      <%= render 'question_fields', form: saved_template_question %>
     <% end %>
     <div data-nested-form-target="add_item">
       <%= link_to "Add Question", "#", data: { action: "nested-form#add_association" }, class: "btn btn-success" %>
