--- a/app/views/prompt_templates/_prompt_template.html.erb
+++ b/app/views/prompt_templates/_prompt_template.html.erb
@@ -1,6 +1,6 @@
 <div class="single-prompt-template" id="<%= dom_id prompt_template %>">
   <h1 class="prompt-template-name"><%= prompt_template.name %></h1>
-  <% prompt_template.questions.each do |question| %>
+  <% prompt_template.template_questions.each do |question| %>
     <%= render "questions/question", question: question %>
   <% end %>
 </div>
