--- a/app/views/prompts/_table.html.erb
+++ b/app/views/prompts/_table.html.erb
@@ -1,13 +1,17 @@
 <table>
   <thead>
     <tr>
+      <th>ID</th>
       <th>Title</th>
+      <th>Body</th>
     </tr>
   </thead>
   <tbody>
-    <% @prompt.responses.each do |response| %>
+    <% prompt.responses.each do |response| %>
       <tr>
-        <td><%= link_to response.title, response %></td>
+        <td><%= response.id %></td>
+        <td><%= link_to response.prompt_text, response %></td>
+        <td><%= response.body %></td>
       </tr>
     <% end %>
   </tbody>
