--- a/app/views/prompts/edit.html.erb
+++ b/app/views/prompts/edit.html.erb
@@ -1,10 +1,6 @@
 <h1>Editing prompt</h1>
-
 <%= render "form", prompt: @prompt %>
-
 <br>
-
 <div>
-  <%= link_to "Show this prompt", @prompt %> |
-  <%= link_to "Back to prompts", prompts_path %>
+  <%= link_to "Show this prompt", prompt_template_prompt_path(@prompt_template, @prompt), class: "btn"  %>
 </div>
