--- a/app/views/prompts/new.html.erb
+++ b/app/views/prompts/new.html.erb
@@ -1,9 +1,6 @@
 <h1>New prompt</h1>
-
 <%= render "form", prompt: @prompt %>
-
 <br>
-
 <div>
-  <%= link_to "Back to prompts", prompts_path %>
+  <%= link_to "Back to template", @prompt_template %>
 </div>
